Right whitespace solved.

--- a/src/styles/header/header.css
+++ b/src/styles/header/header.css
@@ -12,3 +12,10 @@
     color: var(--baby-powder);
     padding: 0.5rem;
 }
+
+@media screen and (max-width: 720px) {
+    .header__container {
+        flex-direction: column;
+        justify-content: center;
+    }
+}
