--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -18,8 +18,8 @@ body {
 
 @media screen and (max-width: 720px) {
     body {
-        width: 100%;
-        height: auto;
+        width: auto;
+        height: 100%;
         margin: 0 auto;
     }
 }
